<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_main"
    tools:context=".MainActivityFragment">

    <TextView
        android:id="@+id/welcomeMessage"
        android:text="@string/WelcomeText"
        android:textColor="@color/textColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/iAmA"
        android:layout_width="wrap_content"
        android:textColor="@color/textColour"
        android:text="@string/IAmA"
        android:layout_below="@id/welcomeMessage"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/fighter"
        android:text="@string/Fighter"
        android:textColor="@color/textColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/supporter"
        android:textColor="@color/textColour"
        android:text="@string/Supporter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
